--- a/WechatSDK/WechatSDK/WechatSDK.csproj
+++ b/WechatSDK/WechatSDK/WechatSDK.csproj
@@ -86,7 +86,11 @@
       <DependentUpon>JSSDKTest.aspx</DependentUpon>
     </Compile>
     <Compile Include="JSTicket.cs" />
+    <Compile Include="OAuthUser.cs" />
+    <Compile Include="OAuth_Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteSettings.cs" />
+    <Compile Include="WXOauth.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
